opam-version: "1.2"
version: "0.6"
maintainer: "Zach Shipko <zachshipko@gmail.com>"
authors: ["Zach Shipko"]
license: "ISC"
homepage: "https://github.com/zshipko/yurt"
bug-reports: "https://github.com/zshipko/yurt/issues"
dev-repo: "https://github.com/zshipko/yurt.git"
doc: "https://github.com/zshipko/yurt"

depends: [
    "dune" {build}
    "conduit-lwt-unix" {>= "1.0.0"}
    "cohttp-lwt-unix" {>= "1.0.0"}
    "lwt_log" {>= "1.0.0"}
    "ezjsonm" {>= "0.5.0"}
]

build: [[
   "dune" "build" "-p" name "-j" jobs
]]
available: [ ocaml-version >= "4.03.0" ]

